src/scss/_utilities.scss
.flex-center {
  display: flex;
  align-items: center;
  justify-content: center;
}
.align-self-start {
  align-self: flex-start;
}
.full-width {
  max-width: none !important;
}
.screen-reader-only {
  border: 0;
  clip: rect(1px, 1px, 1px, 1px);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  width: 1px;
  overflow: hidden;
  position: absolute !important;
  word-wrap: normal !important;
}
.no-scroll {
  height: 100%;
  overflow-y: hidden;
}
@keyframes fade-in {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

